# MLVPN
# (c) 2015 Laurent Coustet <ed@zehome.com>

SUBDIRS = examples

# WIP, does not work.
#doc_htmldir = ${docdir}/build/singlehtml
#doc_html_DATA = \
#    index.html \
#    _static/ajax-loader.gif \
#    _static/up-pressed.png \
#    _static/down-pressed.png \
#    _static/default.css \
#    _static/basic.css \
#    _static/plus.png \
#    _static/jquery.js \
#    _static/pygments.css \
#    _static/doctools.js \
#    _static/searchtools.js \
#    _static/down.png \
#    _static/underscore.js \
#    _static/file.png \
#    _static/comment-close.png \
#    _static/minus.png \
#    _static/comment-bright.png \
#    _static/comment.png \
#    _static/websupport.js \
#    _static/sidebar.js \
#    _static/up.png
#
#CLEANFILES = $(doc_html_DATA)
#
#build/singlehtml:
#	$(MAKE) -C source singlehtml
